syntax = "proto3";

option go_package = "dislinkt/common/post";

package post;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


service PostService{

  rpc GetByUser(GetByUserRequest) returns(GetByUserResponse) {
    option (google.api.http) = {
      get: "/post/user/{username}"
    };
  }

  rpc Get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/post/{id}"
    };
  }
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/post"
    };
  }
  rpc Create(CreateRequest) returns(CreateResponse) {
    option (google.api.http) = {
      post: "/post"
      body: "post"
    };
  }
  rpc Update(UpdateRequest) returns(UpdateResponse) {
    option (google.api.http) = {
      put: "/post/{id}"
      body: "post"
    };
  }

  rpc GetLatestPosts(GetLatestPostRequest) returns(GetLatestPostResponse) {
    option (google.api.http) = {
      get: "/post/latest/{username}"
    };
  }
  //########################COMMENTS##################################
  rpc GetComment(GetRequest) returns(GetResponseComment) {
    option (google.api.http) = {
      get: "/comment/{id}"
    };
  }
  rpc GetAllComments(GetAllRequest) returns(GetAllResponseComment) {
    option (google.api.http) = {
      get: "/comment"
    };
  }
  rpc CreateComment(CreateRequestComment) returns(CreateResponseComment) {
    option (google.api.http) = {
      post: "/comment"
      body: "*"
    };
  }
  rpc UpdateComment(UpdateRequestComment) returns(UpdateResponseComment) {
    option (google.api.http) = {
      put: "/comment/{id}"
      body: "comment"
    };
  }
  //########################REACTIONS##################################
  rpc GetReaction(GetRequest) returns(GetResponseReaction) {
    option (google.api.http) = {
      get: "/reaction/{id}"
    };
  }
  rpc GetAllReactions(GetAllRequest) returns(GetAllResponseReaction) {
    option (google.api.http) = {
      get: "/reaction"
    };
  }
  rpc CreateReaction(CreateRequestReaction) returns(CreateResponseReaction) {
    option (google.api.http) = {
      post: "/reaction"
      body: "*"
    };
  }
  rpc UpdateReaction(UpdateRequestReaction) returns(UpdateResponseReaction) {
    option (google.api.http) = {
      put: "/reaction/{id}"
      body: "reaction"
    };
  }
  rpc GetProfilePosts(GetPostRequest) returns(GetPostsResponse) {
    option (google.api.http) = {
      get: "/post/profile/{profileId}"
    };
  }

  rpc GetConnectionPosts(GetPostRequest) returns(GetPostsResponse) {
    option (google.api.http) = {
      get: "/post/connection/{profileId}"
    };
  }
  //########################USERS##################################
  rpc UpdateUser(UpdateUserRequest) returns(UpdateUserResponse) {
    option (google.api.http) = {
      put: "/post/user"
      body: "user"
    };
  }



}

message GetByUserRequest{
  string username = 1;
}

message GetByUserResponse{
  repeated Post userPosts = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Post post = 1;
}

message GetLatestPostRequest{
  string username = 1;
}

message GetLatestPostResponse{
  repeated Post posts = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated Post posts = 1;
}

message CreateRequest {
  Post post = 1;
}

message CreateResponse {
  Post post = 1;
}

message UpdateRequest {
  string id = 1;
  Post post = 2;
}

message UpdateResponse {
  Post post = 1;
}

message GetPostRequest {
  string profileId = 1;
}

message GetPostsResponse {
  repeated Post posts = 1;
}

//#########################COMMENTS#########################

message GetResponseComment {
  Comment comment = 1;
}

message GetAllResponseComment {
  repeated Comment comments = 1;
}

message CreateRequestComment {
  Comment comment = 1;
  string postId = 2;
}

message CreateResponseComment {
  Comment comment = 1;
}

message UpdateRequestComment {
  string id = 1;
  Comment comment = 2;
}

message UpdateResponseComment {
  Comment comment = 1;
}

//#############################REACTIONS#########################

message GetResponseReaction {
  Reaction reaction = 1;
}

message GetAllResponseReaction {
  repeated Reaction reactions = 1;
}

message CreateRequestReaction {
  Reaction reaction = 1;
  string postId = 2;
}

message CreateResponseReaction {
  Reaction reaction = 1;
}

message UpdateRequestReaction {
  string id = 1;
  Reaction reaction = 2;
}

message UpdateResponseReaction {
  Reaction reaction = 1;
}

//###########################USERS###################

message UpdateUserRequest{
  User user = 1;
}

message UpdateUserResponse{
  User user = 1;
}

//##############################OBJECTS###################


message Post {
  string id = 1;
  User user = 2;
  google.protobuf.Timestamp createdAt = 3;
  Content content = 4;
  repeated Comment comments = 5;
  repeated Reaction reactions = 6;
}

message Comment {
  string id = 1;
  string content = 2;
  string username = 3;
  google.protobuf.Timestamp dateCreated = 4;
}

message Reaction {
  string id = 1;
  string username = 2;
  int64 type = 3;
  google.protobuf.Timestamp createdAt = 4;
}

message User{
  string username = 1;
  string firstName = 2;
  string lastName = 3;
}

message Content {
  string text = 1;
  string image = 2;
  repeated string links = 3;
}