syntax = "proto3";

option go_package = "dislinkt/common/user";

package user;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


service UserService{
  rpc Get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/user/{id}"
    };
  }
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/user"
    };
  }
  rpc Create(CreateRequest) returns(CreateResponse) {
    option (google.api.http) = {
      post: "/user"
      body: "user"
    };
  }
  rpc Update(UpdateRequest) returns(UpdateResponse) {
    option (google.api.http) = {
      put: "/user/{id}"
      body: "user"
    };
  }
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  User user = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated User users = 1;
}

message CreateRequest {
  User user = 1;
}

message CreateResponse {
  User user = 1;
}

message UpdateRequest {
  string id = 1;
  User user = 2;
}

message UpdateResponse {
  User user = 1;
}

message User {
  string id = 1;
  string username = 2;
  string firstName = 3;
  string lastName = 4;
  google.protobuf.Timestamp dateOfBirth = 5;
  string email = 7;
}